# oneway-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/oneway_cli/: __init__.py  cli.py  client.py
tests/: test_alert_creation.py  test_alert_deletion.py  test_alerts.py  test_client_login.py  test_login.py  test_orders.py  test_tracking.py
