# Package configuration
[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "oneway-cli"
version = "0.3.1"
description = "Command-line tools for One Way Cargo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "curl_cffi>=0.15",
  "keyring>=25",
  "platformdirs>=4",
  "rich>=13",
  "typer>=0.12",
]

license = "MIT"

[project.urls]
Repository = "https://github.com/italovisconti/oneway-cli"
Issues = "https://github.com/italovisconti/oneway-cli/issues"

[project.scripts]
oneway-cli = "oneway_cli.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
